[tool.poetry]
name = "cowrywise-assessment"
version = "0.1.0"
description = "Project for cowrywise backend developer role assessment"
authors = ["Mogboluwaga Onayade <mogbo18@yahoo.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3.3"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
include = ["packages/**/*.py"]
line-length = 119

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "N",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "A",
    "COM",
    "C4",
    "DTZ",
    "DJ",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "RSE",
    "RET",
    "SLF",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = ["COM812", "ISC001", "DJ008", "PLR0913", "PLR2004", "RUF012", "ARG002"]

[tool.ruff.lint.isort]
length-sort = true
combine-as-imports = true
length-sort-straight = true
section-order = ["future", "standard-library", "third-party","django", "restframework", "fastapi", "middleman_api", "backend_api", "frontend_api", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"src" = ["src"]
"middleman_api" = ["middleman_api"]
"backend_api" = ["backend_api"]
"frontend_api" = ["frontend_api"]
"django" = ["django"]
"fastapi" = ["fastapi"]
"restframework" = ["rest_framework", "drf_yasg"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.per-file-ignores]
"**/test_**.py" = ["S101", "S105", "S106", "ANN201", "PT004", "FBT002"]
"**/conftest.py" = ["S101", "S105", "S106", "ANN201", "PT004"]
"**/server.py" = ["N802"]
"**/backend_api/**/test_**.py" = ["PT009", "PT027"]
"**/frontend_api/**/test_**.py" = ["PT009", "PT027"]